--- a/Lawyer/index.html
+++ b/Lawyer/index.html
@@ -11,39 +11,53 @@
         <h1>Royal Laws</h1>
         <p>Your Trusted Legal Partner</p>
         <nav>
-            <a href="index.html" class="active">Home</a>
-            <a href="services.html">Services</a>
-            <a href="#" id="contactLink">Contact</a>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
     <main>
-        <section class="intro">
+        <section class="hero">
             <h2>Welcome to Royal Laws</h2>
-            <p>Expert legal advice and representation tailored to your needs.</p>
+            <p>Professional legal services dedicated to your success.</p>
+        </section>
+        <section class="about">
+            <h3>About Us</h3>
+            <p>At Royal Laws, we provide expert legal advice and representation to help you navigate complex legal matters confidently and effectively.</p>
         </section>
     </main>
 
     <footer>
-        <p>Contact us at <a href="mailto:shailendra.sharma79@gmail.com">shailendra.sharma79@gmail.com</a> | Phone: 9876543210</p>
+        <p>Contact us at: <a href="mailto:shailendra.sharma79@gmail.com">shailendra.sharma79@gmail.com</a> | Phone: <a href="tel:9876543210">9876543210</a></p>
+        <p>&copy; 2024 Royal Laws. All rights reserved.</p>
     </footer>
 
-    <div id="exitIntentPopup" class="popup hidden">
+    <!-- Exit Intent Popup -->
+    <div id="exitPopup" class="popup-overlay" style="display:none;">
         <div class="popup-content">
-            <button id="closePopup" class="close-btn">&times;</button>
+            <button id="closePopup">X</button>
             <div class="tabs">
-                <button class="tab-btn active" data-tab="buy">Buy</button>
-                <button class="tab-btn" data-tab="edit">Edit</button>
+                <button class="tab-button active" data-tab="buy">Buy</button>
+                <button class="tab-button" data-tab="edit">Edit</button>
             </div>
-            <div class="tab-content active" id="buy">
-                <h3>Buy Our Legal Services</h3>
-                <p>Get professional legal consultation and representation with Royal Laws. Contact us today!</p>
-                <button class="buy-btn">Buy Now</button>
+            <div class="tab-content" id="buy" style="display:block;">
+                <h3>Interested in Our Services?</h3>
+                <p>Contact Royal Laws for professional legal guidance and representation.</p>
+                <a href="contact.html" class="btn">Buy Now</a>
             </div>
-            <div class="tab-content" id="edit">
-                <h3>Edit Your Legal Documents</h3>
-                <p>Need to update or revise your documents? Our team is here to help.</p>
-                <button class="edit-btn">Edit Now</button>
+            <div class="tab-content" id="edit" style="display:none;">
+                <h3>Edit Your Information</h3>
+                <form id="editForm">
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" value="shailendra.sharma79@gmail.com" required>
+                    <label for="phone">Phone:</label>
+                    <input type="tel" id="phone" name="phone" value="9876543210" required>
+                    <button type="submit" class="btn">Save</button>
+                </form>
+                <p id="editMsg" class="msg"></p>
             </div>
         </div>
     </div>
